Prep Release 2 - new menu left + filters misc CSS

--- a/herams/overview.html
+++ b/herams/overview.html
@@ -49,13 +49,35 @@
                 </div>
                 <div class="menu-items">
                     <ul ng-cloak>
-                        <li ng-repeat="category in categories" ng-class="{'selected': category.id==catIDSelect[0] }">
-                            <div class="item">
+                        <li ng-repeat="category in categories">
+                            <div class="item" ng-class="{'selected': category.id==catIDSelect[0] }">
                                 <span ng-if="category.id!=catIDSelect[0]"><a ng-click="launchLayout(category)">{{category.name}}</a></span>
                                 <span ng-if="category.id==catIDSelect[0]">{{category.name}}</span>
-                                <img src="img/menu_open.svg"/>
+                                <img src="img/menu_open.svg" ng-show="category.subcategories!=null && category.id!=catIDSelect[0]"/>
+                                <img src="img/menu_close.svg" ng-show="category.subcategories!=null && category.id==catIDSelect[0]"/>
                             </div>
-                            <div class="subcategories" ng-if="category.subcategories!=null">TEST</div>
+                            <div class="sub-categories parent-category-id-{{category.id}}" ng-if="category.subcategories!=null" ng-show="category.id==catIDSelect[0]">
+                                <ul ng-cloak>
+                                    <li ng-repeat="subcat in category.subcategories">
+                                        <div ng-class="{'selected': subcat.id==catIDSelect[1] }">
+                                            <span ng-if="subcat.id!=catIDSelect[1]"><a ng-click="launchLayout(subcat,1)">{{subcat.name}}</a></span>
+                                            <span ng-if="subcat.id==catIDSelect[1]">{{subcat.name}}</span>
+                                            <img src="img/menu_open.svg" ng-show="subcat.subcategories!=null && subcat.id!=catIDSelect[1]"/>
+                                            <img src="img/menu_close.svg" ng-show="subcat.subcategories!=null && subcat.id==catIDSelect[1]"/>
+                                        </div>
+                                        <div class="sub-categories sub-categories-lev2 parent-category-id-{{subcat.id}}" ng-if="subcat.subcategories!=null" ng-show="subcat.id==catIDSelect[1]">
+                                            <ul ng-cloak>
+                                                <li ng-repeat="subsubcat in subcat.subcategories">
+                                                    <div ng-class="{'selected': subsubcat.id==catIDSelect[2] }">
+                                                        <span ng-if="subsubcat.id!=catIDSelect[2]"><a ng-click="launchLayout(subsubcat,2)">{{subsubcat.name}}</a></span>
+                                                        <span ng-if="subsubcat.id==catIDSelect[2]">{{subsubcat.name}}</span>
+                                                    </div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -92,9 +114,6 @@
                                 <div class="filter-location"><dropdown icon="img/filter_where.svg" value="Nigeria" items="filters[0].values"/></div>
                                 <div class="filter-calendar"><datepicker date="date"></datepicker></div>
                                 <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[2].values"/></div>
-                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[3].values"/></div>
-                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[4].values"/></div>
-                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[5].values"/></div>
                                 <div><button type="button" class="btn btn-primary">apply</button></div>
                             </div>
                         </div>
