--- a/herams/overview.html
+++ b/herams/overview.html
@@ -111,14 +111,51 @@
 
                         <div class="row">
                             <div class="col-12 filters">
-                                <div class="filter-location"><dropdown icon="img/filter_where.svg" value="Nigeria" items="filters[0].values"/></div>
-                                <div class="filter-calendar"><datepicker date="date"></datepicker></div>
-                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[2].values"/></div>
-                                <div><button type="button" class="btn btn-primary">apply</button></div>
+                                <div class="filters-groups">
+                                    <div class="filter-location">
+                                        <dropdown
+                                                icon="img/filter_where.svg"
+                                                value="Nigeria"
+                                                items="filters[0].values"/>
+                                    </div>
+                                    <div class="filter-calendar">
+                                        <datepicker date="date"></datepicker>
+                                    </div>
+                                    <div class="filter-HF">
+                                        <dropdown
+                                                icon="img/filter_who.svg"
+                                                value="nc"
+                                                items="filters[2].values"/>
+                                    </div>
+                                </div>
+                                <div><!--<button type="button" class="btn btn-primary">apply</button>--></div>
                             </div>
                         </div>
                     </div>
                     <div class="main-content" ng-cloak></div>
+                    <div class="global-filters-popovers">
+                        <div class="filters-popover filter-location">
+                            <filters-popover
+                                    id="popover-location-1"
+                                    open-next="#popover-location-2"
+                                    title="State"
+                                    items="['Enugu','Edo','Ekiti','Gombelmo','Jigawa','Kaduna','Kano','Katsina','Kebbi','Kogi','Kwara','Lagos']"
+                                    grouped="true"
+                            ></filters-popover>
+                            <filters-popover
+                                    id="popover-location-2"
+                                    title="LGA"
+                                    items="['Bimni-Gwari','Chikun','Giwa','Igabi','Ikara','Jaba','Jema a','Kachia','Kaduna North','Kaduna South','Kagarko','Kajuru']"
+                                    grouped="true"
+                            ></filters-popover>
+                        </div>
+                        <div class="filters-popover filter-HF">
+                            <filters-popover
+                                    items="['Tertiary Hospital','Secondary Hospital','Primary Health Care Centre','Health Clinic','Health Post','IDP Camp Clinic','Mobile clinic']"
+                                    grouped="false"
+                            ></filters-popover>
+                        </div>
+                    </div>
                </div>
             </div>
 
@@ -207,6 +244,7 @@
   <script src="js/overview/services/HFMapSvc.js"></script>
   <script src="js/overview/directives/filters/datepicker.js"></script>
   <script src="js/overview/directives/filters/dropdown.js"></script>
+  <script src="js/overview/directives/filters/filters_popovers.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
