--- a/herams/js/overview/directives/filters/dropdown.html
+++ b/herams/js/overview/directives/filters/dropdown.html
@@ -1,6 +1,6 @@
 <div class="filter-dropdown">
   <div class="filter-value">
-      <img src="{{icon}}"/>{{ value }}
+      <img src="{{icon}}"/>{{ getValue() }}
       <i class="fas fa-angle-down"></i>
   </div>
 </div>
