--- a/herams/index.html
+++ b/herams/index.html
@@ -106,7 +106,7 @@
   <!--<script src="../bower_components/angular-animate/angular-animate.js"></script>-->
   <script src="../bower_components/angular-mocks/angular-mocks.js"></script>
   <script src="../bower_components/angular-loader/angular-loader.js"></script>
-  <!--<script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>-->
+  <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
 
   <script src="../bower_components/leaflet/dist/leaflet-src.js"></script>
   <script src="../bower_components/highcharts/highcharts.js"></script>
@@ -129,9 +129,9 @@
   <script src="js/common/services/commonSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
   <script src="js/common/services/LayerPopupSvc.js"></script>
-  <script src="js/home/controllers/home.js"></script>
   <script src="js/home/directives/entry-popups.js"></script>
   <script src="js/home/directives/homemap.js"></script>
+  <script src="js/home/controllers/home.js"></script>
   <script src="js/home/services/MainMapSvc.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
