--- a/herams/js/overview/directives/filters/filters_popovers.html
+++ b/herams/js/overview/directives/filters/filters_popovers.html
@@ -1,9 +1,9 @@
  <div class="popovers-containers">
      <div class="popover-hdr" ng-if="title!=null">
          {{title}}
-         <i class="far fa-check-square" ng-if="getLevelStatus()==1" ng-click="checkLevel($event)"></i>
-         <i class="far fa-square" ng-if="getLevelStatus()==0" ng-click="checkLevel($event)"></i>
-         <i class="fas fa-square" ng-if="getLevelStatus()==2" ng-click="checkLevel($event)"></i>
+         <img src="img/filters/select_all.png" ng-if="getLevelStatus()==1" ng-click="checkLevel($event)""/>
+         <img src="img/filters/select_off.png" ng-if="getLevelStatus()==0" ng-click="checkLevel($event)"/>
+         <img src="img/filters/select_partial.png" ng-if="getLevelStatus()==2" ng-click="checkLevel($event)"/>
      </div>
      <ul>
          <li ng-repeat="item in items">
@@ -12,9 +12,9 @@
                  {{item}}
              </span>
              <span class="checkbox" ng-click="checkItem($event,item)">
-                 <i class="far fa-check-square" ng-if="isSelected(item)==1"></i>
-                 <i class="far fa-square" ng-if="isSelected(item)==0"></i>
-                 <i class="fas fa-square" ng-if="isSelected(item)==2" ng-click="checkLevel($event)"></i>
+                 <img src="img/filters/select_all.png" ng-if="isSelected(item)==1"/>
+                 <img src="img/filters/select_off.png" ng-if="isSelected(item)==0"/>
+                 <img src="img/filters/select_partial.png" ng-if="isSelected(item)==2" ng-click="checkLevel($event)"/>
              </span>
          </li>
      </ul>
