--- a/herams/overview.html
+++ b/herams/overview.html
@@ -53,8 +53,8 @@
                             <div class="item" ng-class="{'selected': category.id==catIDSelect[0] }">
                                 <span ng-if="category.id!=catIDSelect[0]"><a ng-click="launchLayout(category)">{{category.name}}</a></span>
                                 <span ng-if="category.id==catIDSelect[0]" ng-click="launchLayout(category)">{{category.name}}</span>
-                                <img src="img/menu_open.svg" ng-show="category.subcategories!=null && category.id!=catIDSelect[0]"/>
-                                <img src="img/menu_close.svg" ng-show="category.subcategories!=null && category.id==catIDSelect[0]"/>
+                                <img src="img/menu_open.svg" ng-show="category.subcategories!=null && category.id!=catIDSelect[0]" ng-click="launchLayout(category)"/>
+                                <img src="img/menu_close.svg" ng-show="category.subcategories!=null && category.id==catIDSelect[0]" ng-click="launchLayout(category)"/>
                             </div>
                             <div class="sub-categories parent-category-id-{{category.id}}" ng-if="category.subcategories!=null" ng-show="category.id==catMenuON[0]">
                                 <ul ng-cloak>
@@ -62,8 +62,8 @@
                                         <div ng-class="{'selected': subcat.id==catIDSelect[1] }">
                                             <span ng-if="subcat.id!=catIDSelect[1]"><a ng-click="launchLayout(subcat,1)">{{subcat.name}}</a></span>
                                             <span ng-if="subcat.id==catIDSelect[1]">{{subcat.name}}</span>
-                                            <img src="img/menu_open.svg" ng-show="subcat.subcategories!=null && subcat.id!=catIDSelect[1]"/>
-                                            <img src="img/menu_close.svg" ng-show="subcat.subcategories!=null && subcat.id==catIDSelect[1]"/>
+                                            <img src="img/menu_open.svg" ng-show="subcat.subcategories!=null && subcat.id!=catIDSelect[1]" ng-click="launchLayout(subcat,1)"/>
+                                            <img src="img/menu_close.svg" ng-show="subcat.subcategories!=null && subcat.id==catIDSelect[1]" ng-click="launchLayout(subcat,1)"/>
                                         </div>
                                         <div class="sub-categories sub-categories-lev2 parent-category-id-{{subcat.id}}" ng-if="subcat.subcategories!=null" ng-show="subcat.id==catMenuON[1]">
                                             <ul ng-cloak>
@@ -140,7 +140,7 @@
                                         </button>
                                     </div>
                                     <div class="filter-btns">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i>Clear</button>
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="clearMainFilters()"><i class="fas fa-times"></i>Clear</button>
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="applyFilters()"><i class="fas fa-check"></i>Apply</button>
                                     </div>
                                 </div>
@@ -190,8 +190,8 @@
                           </div>
                           <div class="modal-footer">
                               <div class="advanced-filters-cnt">Total: {{getAdvancedFiltersCnt()}} filters</div>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i>Clear</button>
-                              <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-check"></i>Apply</button>
+                                <button type="button" class="btn btn-secondary" ng-click="clearSetFilters()"><i class="fas fa-times"></i>Clear</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-check"></i>ok</button>
                           </div>
                         </div>
                       </div>
@@ -292,10 +292,10 @@
 
   <!-- inject:js -->
   <script src="config/config.js"></script>
-  <script src="js/common/directives/user_popover.js"></script>
   <script src="js/common/services/commonSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
   <script src="js/common/services/LayerPopupSvc.js"></script>
+  <script src="js/common/directives/user_popover.js"></script>
   <script src="js/overview/controllers/MainCtrl.js"></script>
   <script src="js/overview/directives/hfmap.js"></script>
   <script src="js/overview/services/chartsSvc.js"></script>
@@ -316,9 +316,9 @@
 -->
 
   <!-- highcharts export/print -->
-    <script src="http://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <!-- optional -->
-    <script src="http://code.highcharts.com/modules/offline-exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
 
 </body>
 </html>
