--- a/herams/js/overview/directives/dataviz/dataviz-table.html
+++ b/herams/js/overview/directives/dataviz/dataviz-table.html
@@ -1,18 +1,24 @@
 <div class="dataviz-table">
-  <div class="title">{{tables[0].name}}</div>
-  <div>
-    <table>
-		<thead>
-		<tr>
-          <th ng-repeat="col in tables[0].cols track by $index" ng-class="{'wider': col.class=='wide'}">{{ col.label }}</th>
- 		</tr>
-		</thead>
-		<tbody>
-		<tr ng-repeat="row in tables[0].rows track by $index" ng-class="{'no-border-bottom': $index==tables[0].rows.length-1}">
-			<td ng-repeat="val in row track by $index" ng-class="{'border-left': $index>0}">{{ val }}</td>
-		</tr>
-		</tbody>
-	</table>
-  </div>
+	<div ng-if="tables.length>0">
+	  <div class="title">{{tables[0].name}}</div>
+	  <div>
+		<table>
+			<thead>
+			<tr>
+			  <th ng-repeat="col in tables[0].cols track by $index" ng-class="{'wider': col.class=='wide'}">{{ col.label }}</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr ng-repeat="row in tables[0].rows track by $index" ng-class="{'no-border-bottom': $index==tables[0].rows.length-1}">
+				<td ng-repeat="val in row track by $index" ng-class="{'border-left': $index>0}">{{ val }}</td>
+			</tr>
+			</tbody>
+		</table>
+	  </div>
+	</div>
+	<div ng-if="tables.length==0">
+	  No data available
+	</div>
 </div>
+
 
