--- a/herams/js/overview/directives/hf-map.html
+++ b/herams/js/overview/directives/hf-map.html
@@ -17,13 +17,13 @@
 -->
 <!-------------------- END DO NOT REMOVE ------------------->
 
-    <div id="mapid-wkspace"></div>
-        <div class="map-legend">
-            <div class="legend-part" ng-cloak>
-                <div ng-repeat="legendItem in  legend track by $index">
-                    <i class="fas fa-circle" ng-style="{'color':legendItem.color}"></i>
-                    <span>{{legendItem.label}}</span>
-                </div>
+    <div id="mapid-wkspace">No data available</div>
+    <div class="map-legend">
+        <div class="legend-part" ng-cloak>
+            <div ng-repeat="legendItem in  legend track by $index">
+                <i class="fas fa-circle" ng-style="{'color':legendItem.color}"></i>
+                <span>{{legendItem.label}}</span>
             </div>
         </div>
+    </div>
 </div>
