--- a/herams/overview.html
+++ b/herams/overview.html
@@ -50,31 +50,28 @@
                 <div class="menu-items">
                     <ul ng-cloak>
                         <li ng-repeat="category in categories">
-                            <div class="item" ng-class="{'selected': category.id==catIDSelect[0] }">
-                                <span ng-if="category.id!=catIDSelect[0]">
-                                    <a ng-click="launchLayout(category)">{{category.name}}</a>
+                            <div class="item" ng-class="{'selected': category.id==catIDSelect[0], 'greyed-out': !hasData(category) }">
+                                <span ng-click="launchLayout(category)">{{category.name}}</span>
+                                <span class="item-open-close" ng-if="category.subcategories!=null" ng-click="launchLayout(category)">
+                                    <img src="img/menu_open.svg" ng-if="category.id!=catMenuON[0]"/>
+                                    <img src="img/menu_close.svg" ng-if="category.id==catMenuON[0]"/>
                                 </span>
-                                <span ng-if="category.id==catIDSelect[0]" ng-click="launchLayout(category)">{{category.name}}</span>
-                                <img src="img/menu_open.svg" ng-show="category.subcategories!=null && category.id!=catMenuON[0]" ng-click="launchLayout(category)"/>
-                                <img src="img/menu_close.svg" ng-show="category.subcategories!=null && category.id==catMenuON[0]" ng-click="launchLayout(category)"/>
                             </div>
                             <div class="sub-categories parent-category-id-{{category.id}}" ng-if="category.subcategories!=null" ng-show="category.id==catMenuON[0]">
                                 <ul ng-cloak>
                                     <li ng-repeat="subcat in category.subcategories">
-                                        <div ng-class="{'selected': subcat.id==catIDSelect[1] }">
-                                            <span ng-if="subcat.id!=catIDSelect[1]"><a ng-click="launchLayout(subcat,1)">{{subcat.name}}</a></span>
-                                            <span ng-if="subcat.id==catIDSelect[1]">{{subcat.name}}</span>
-                                            <img src="img/menu_open.svg" ng-show="subcat.subcategories!=null && subcat.id!=catMenuON[1]" ng-click="launchLayout(subcat,1)"/>
-                                            <img src="img/menu_close.svg" ng-show="subcat.subcategories!=null && subcat.id==catMenuON[1]" ng-click="launchLayout(subcat,1)"/>
+                                        <div ng-class="{'selected': subcat.id==catIDSelect[1], 'greyed-out': !hasData(subcat) }">
+                                            <span ng-click="launchLayout(subcat,1)">{{subcat.name}}</span>
+                                            <span class="item-open-close" ng-if="subcat.subcategories!=null" ng-click="launchLayout(subcat,1)">
+                                                <img src="img/menu_open.svg" ng-if="subcat.id!=catMenuON[1]"/>
+                                                <img src="img/menu_close.svg" ng-if="subcat.id==catMenuON[1]"/>
+                                            </span>
                                         </div>
                                         <div class="sub-categories sub-categories-lev2 parent-category-id-{{subcat.id}}" ng-if="subcat.subcategories!=null" ng-show="subcat.id==catMenuON[1]">
                                             <ul ng-cloak>
                                                 <li ng-repeat="subsubcat in subcat.subcategories">
-                                                    <div ng-class="{'selected': subsubcat.id==catIDSelect[2] }">
-                                                        <span ng-if="subsubcat.id!=catIDSelect[2]">
-                                                            <a ng-click="launchLayout(subsubcat,2)">{{subsubcat.name}}</a>
-                                                        </span>
-                                                        <span ng-if="subsubcat.id==catIDSelect[2]">{{subsubcat.name}}</span>
+                                                    <div ng-class="{'selected': subsubcat.id==catIDSelect[2], 'greyed-out': !hasData(subsubcat) }">
+                                                        <span ng-click="launchLayout(subsubcat,2)">{{subsubcat.name}}</span>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -195,7 +192,7 @@
                           <div class="modal-footer">
                               <div class="advanced-filters-cnt">Total: {{getAdvancedFiltersCnt()}} filters</div>
                                 <button type="button" class="btn btn-secondary" ng-click="clearSetFilters()"><i class="fas fa-times"></i>Clear</button>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-check"></i>ok</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="applyFilters()"><i class="fas fa-check"></i>Apply</button>
                           </div>
                         </div>
                       </div>
