--- a/herams/js/overview/directives/filters/advanced_search.html
+++ b/herams/js/overview/directives/filters/advanced_search.html
@@ -1,21 +1,36 @@
 <div class="advanced-search-modal">
+    <div class="advanced-filters-header">
+        <div class="advanced-filters-title" ng-click="expandAllGrps()">
+            <h5>Filters</h5>
+            <span class="filters-collapse-btn">
+                <img src="img/filters/arrow_main-criteria.png" ng-class="{'collapse':isExpanded}"/>
+            </span>
+        </div>
+        <div class="advanced-filters-close-btn">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true"><img src="img/filters/clear_off.png"/></span>
+            </button>
+        </div>
+    </div>
      <ul>
          <li class="group-name" ng-repeat="group in data track by $index">
              <div class="group-title" ng-click="toggleQuestions($event,group.id)" ng-class="greyoutCls(group.title)">
-                 <img src="img/menu_open.svg" ng-if="!isGrpOpened(group.id)">
+                 <img src="img/menu_open.svg"  ng-if="!isGrpOpened(group.id)">
                  <img src="img/menu_close.svg" ng-if="isGrpOpened(group.id)">
-                 <span ng-bind-html="group.title"></span>{{getGroupCnt(group.title)}}
+                 <span ng-bind-html="group.title"></span>
+                 {{getGroupCnt(group.title)}}
              </div>
-             <div class="group-question-list" ng-class="setGroupClass(group.id)">
+             <div class="group-question-list filtermode" ng-class="setGroupClass(group.id)">
                  <ul>
                      <li class="group-question" ng-repeat="question in getQuestions(group.title)">
                          <div class="question-text" ng-click="toggleAnswers($event,question.code)">
-                             <img src="img/filters/select_off.png" ng-if="getQStatus(group.title,question.code)==0" ng-click="selectAllQ($event, group.title,question.code,0)"/>
-                             <img src="img/filters/select_all.png" ng-if="getQStatus(group.title,question.code)==1" ng-click="selectAllQ($event, group.title,question.code,1)"/>
+                             <img src="img/filters/select_off.png"     ng-if="getQStatus(group.title,question.code)==0" ng-click="selectAllQ($event, group.title,question.code,0)"/>
+                             <img src="img/filters/select_all.png"     ng-if="getQStatus(group.title,question.code)==1" ng-click="selectAllQ($event, group.title,question.code,1)"/>
                              <img src="img/filters/select_partial.png" ng-if="getQStatus(group.title,question.code)==2" ng-click="selectAllQ($event, group.title,question.code,2)"/>
                              <span ng-bind-html="question.text"></span>
+                             <img src="img/filters/arrow_main-criteria.png" class="q-collapse-chevron" ng-class="{'collapse':isQExpanded(question.code)}"/>
                          </div>
-                        <div class="question-answers-list"  ng-class="question.code">
+                        <div class="question-answers-list" ng-class="question.code">
                              <ul>
                                  <li class="question-answer" ng-repeat="answer in question.answers">
                                      <div class="answer-text" ng-click="checkItem($event,question.code,answer.code)">
